# parasect

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  release.yaml
e2e/: less_than_or_equal.sh  less_than_or_equal_slow.sh
src/: command_gen.rs  main.rs
src/algorithms/: mod.rs  parasect.rs  parasect_result_map.rs
src/cli/: cli_args.rs  error_handling.rs  mod.rs  utils.rs
src/collections/: collect_collection.rs  collect_vec.rs  mod.rs  pred_succ.rs
src/messaging/: fan.rs  listener.rs  mailbox.rs  mod.rs  once_listener.rs  once_mailbox.rs  periodic_notifier.rs  pipe.rs
src/parasect/: background_loop.rs  event.rs  event_handler.rs  mod.rs  parasect.rs  parasect_result_map.rs  types.rs  worker.rs
src/range/: bisecting_range_queue.rs  mod.rs  numeric_range.rs  numeric_range_set.rs
src/setup/: cli_args.rs  command_gen.rs  mod.rs  parasect_settings.rs
src/task/: cancellable_message.rs  cancellable_subprocess.rs  cancellable_task.rs  cancellable_task_util.rs  free_cancellable_task.rs  function_cancellable_task.rs  ignore_cancel_cancellable_task.rs  map_cancellable_task.rs  mod.rs  result_cancellable_task.rs  test_cancellable_task.rs  test_util.rs
src/test_util/: test_util.rs
src/threading/: actor.rs  async_value.rs  background_loop.rs  fan.rs  mailbox.rs  mod.rs  notifiable.rs  once_actor.rs  once_mailbox.rs  once_reactor.rs  single_use_cell.rs
src/ui/: line.rs  mod.rs  no_tty_ui.rs  progress_bar.rs  recent_log_display.rs  segment.rs  tty_ui.rs  ui.rs  ui_component.rs
src/util/: functional.rs  macros.rs  mod.rs  string.rs
(+5 files in other folders)
