[package]
name = "parasect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.16.0"
ibig = "0.3.6"
crossbeam-channel = "0.5.10"
shared_child = "1.0.0"
dashmap = "5.5.3"

[dev-dependencies]
proptest = "1.4.0"
