[package]
name = "parasect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.2"
crossbeam-channel = "0.5.11"
dashmap = "5.5.3"
ibig = "0.3.6"
num_cpus = "1.16.0"
shared_child = "1.0.0"
termion = "3.0.0"

[dev-dependencies]
proptest = "1.4.0"
rand = "0.8.5"
