[package]
description = "An n-ary search tool that operates on shell commands"
edition = "2021"
license = "Apache-2.0"
name = "parasect"
repository = "https://github.com/jonathan-lemos/parasect"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.2"
clap = { version = "4.5.1", features = ["derive"] }
crossbeam-channel = "0.5.11"
dashmap = "5.5.3"
do-notation = "0.1.3"
ibig = "0.3.6"
lru = "0.12.2"
num_cpus = "1.16.0"
shared_child = "1.0.0"
termion = "3.0.0"
unicode-segmentation = "1.11.0"

[dev-dependencies]
proptest = "1.4.0"
rand = "0.8.5"
